got the start btn to function in the console.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
 
         <div id="start-screen">
-            <button type="button" class="btn btn-primary">START</button>
+            <button type="button" class="btn btn-primary" id="start-btn">START</button>
 </div>    
         <div id="results"></div>
 
@@ -35,9 +35,9 @@
     <!-- this is the container box for the questions and answers -->
     <!-- where the countdown timer will be displayed -->
     <div id="end-screen">
-        <h3>Correct:</h3>
-        <h3>Incorrect:</h3>
-        <h3>Unanswered:</h3>
+        <p>Correct:<span id="correct-answer"></span></p>
+        <p>Incorrect<span id="incorrect-answer"></span></p>
+        <p>Unanswered<span id="unanswered-answer"></span></p>
     </div>
 
     <div id="trivia-box">
