answered correctly is tallying nicely incorrect answers have yet to show up on page. shows up in the console log though

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- where the countdown timer will be displayed -->
     <div id="end-screen">
         <p>Correct:<span id="correct-answer"></span></p>
-        <p>Incorrect<span id="incorrect-answer"></span></p>
-        <p>Unanswered<span id="unanswered-answer"></span></p>
+        <p>Incorrect:<span id="incorrect-answer"></span></p>
+        <p>Unanswered:<span id="unanswered-answer"></span></p>
     </div>
 
     <div id="trivia-box">
