start and end screen transition well

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
 
         <div id="start-screen">
-            <button type="button" class="btn btn-primary" id="start-btn">START</button>
+            <button type="button" class="btn btn-danger" id="start-btn">START</button>
 </div>    
         <div id="results"></div>
 
