adding comments and quiz seems to be function well at the moment

--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
 
 
     
-
+<!-- decided to just go with a start button rather that screen. looked a lot better. -->
         <div id="start-screen">
             <button type="button" class="btn btn-danger" id="start-btn">START</button>
-</div>    
+</div>   
+ <!--box where the players results will be shown  -->
         <div id="results"></div>
 
     
     <!-- this is the container box for the questions and answers -->
     <!-- where the countdown timer will be displayed -->
     <div id="end-screen">
-        <p>Correct:<span id="correct-answer"></span></p>
-        <p>Incorrect:<span id="incorrect-answer"></span></p>
-        <p>Unanswered:<span id="unanswered-answer"></span></p>
+        <h2>Correct:<span id="correct-answer"></span></h2>
+        <h2>Incorrect:<span id="incorrect-answer"></span></h2>
+        <h2>Unanswered:<span id="unanswered-answer"></span></h2>
     </div>
 
     <div id="trivia-box">
