--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <div id="display-timer">00:60</div>
+            <div id="display-timer"></div>
 
             <p class="lead"></p>
         </div>
